[package]
name = "rust_engineio"
version = "0.5.0"
authors = ["Bastian Kersting <bastian@cmbt.de>"]
edition = "2021"
description = "An implementation of a engineio client written in rust."
readme = "README.md"
repository = "https://github.com/1c3t3a/rust-socketio"
keywords = ["engineio", "network", "protocol", "client"]
categories = ["network-programming", "web-programming", "web-programming::websocket"]
license = "MIT"

[package.metadata.docs.rs]
all-features = true

[dependencies]
base64 = "0.21.5"
bytes = "1"
reqwest = { version = "0.11.22", features = ["blocking", "native-tls", "stream"] }
adler32 = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http = "0.2.9"
tokio-tungstenite = { version = "0.20.1", features = ["native-tls"] }
tungstenite = "0.21.0"
tokio = "1.36.0"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
async-trait = "0.1.79"
async-stream = "0.3.5"
thiserror = "1.0"
native-tls = "0.2.11"
url = "2.4.1"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }
lazy_static = "1.4.0"

[dev-dependencies.tokio]
version = "1.36.0"
# we need the `#[tokio::test]` macro
features = ["macros"]

[[bench]]
name = "engineio"
harness = false

# needs to be present in order to support the benchmark
# ci job
# source: https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
[lib]
bench = false

[features]
default = ["async"]
async-callbacks = []
async = ["async-callbacks"]
