[package]
name = "rust_socketio"
version = "0.4.3"
authors = ["Bastian Kersting <bastian@cmbt.de>"]
edition = "2021"
description = "An implementation of a socketio client written in rust."
readme = "../README.md"
repository = "https://github.com/1c3t3a/rust-socketio"
keywords = ["socketio", "engineio", "network", "protocol", "client"]
categories = ["network-programming", "web-programming", "web-programming::websocket"]
license = "MIT"

[dependencies]
rust_engineio = { version = "0.4.3", path = "../engineio" }
base64 = "0.21.2"
bytes = "1"
backoff = "0.4"
rand = "0.8.5"
adler32 = "1.2.0"
serde_json = "1.0"
thiserror = "1.0"
native-tls = "0.2.11"
url = "2.3.1"
tokio = { version = "1.16.1", optional = true }
futures-util = { version = "0.3", default-features = false, features = ["sink"], optional = true }
async-stream = { version = "0.3.5", optional = true }
log = "0.4.17"
serde = "1.0.168"

[dev-dependencies]
cargo-tarpaulin = "0.18.5"

[dev-dependencies.tokio]
version = "1.16.1"
# we need the `#[tokio::test]` macro
features = ["macros"]

[features]
default = []
async-callbacks = ["rust_engineio/async-callbacks"]
async = ["async-callbacks", "rust_engineio/async", "tokio", "futures-util", "async-stream"]

[[example]]
name = "async"
path = "examples/async.rs"
required-features = ["async"]
