[package]
name = "rust_socketio"
version = "0.6.0"
authors = ["Bastian Kersting <bastian@cmbt.de>"]
edition = "2021"
description = "An implementation of a socketio client written in rust."
readme = "../README.md"
repository = "https://github.com/1c3t3a/rust-socketio"
keywords = ["socketio", "engineio", "network", "protocol", "client"]
categories = ["network-programming", "web-programming", "web-programming::websocket"]
license = "MIT"

[package.metadata.docs.rs]
all-features = true

[dependencies]
rust_engineio = { version = "0.6.0", path = "../engineio", default-features = false}
base64 = "0.22.0"
bytes = "1"
backoff = "0.4"
rand = "0.8.5"
adler32 = "1.2.0"
serde_json = "1.0"
thiserror = "1.0"
url = "2.5.2"
tokio = { version = "1.37.0", optional = true }
futures-util = { version = "0.3", default-features = false, features = ["sink"], optional = true }
async-stream = { version = "0.3.5", optional = true }
log = "0.4.22"
serde = "1.0.209"
native-tls = { version = "0.2", optional = true }
rustls = { version = "0.22", optional = true }
getrandom = "0.2.10"

[dev-dependencies]
cargo-tarpaulin = "0.18.5"
serial_test = "3.0.0"

[dev-dependencies.tokio]
version = "1.37.0"
# we need the `#[tokio::test]` macro
features = ["macros", "rt-multi-thread"]

[features]
default = ["native-tls"]
async-callbacks = ["rust_engineio/async-callbacks"]
async = ["async-callbacks", "rust_engineio/async", "tokio", "futures-util", "async-stream"]
native-tls = ["rust_engineio/native-tls", "_native-tls"]
native-tls-vendored = ["rust_engineio/native-tls-vendored", "_native-tls"]
rustls-tls-native-roots = ["rust_engineio/rustls-tls-native-roots", "_rustls-tls"]
rustls-tls-webpki-roots = ["rust_engineio/rustls-tls-webpki-roots", "_rustls-tls"]
_native-tls = ["dep:native-tls"]
_rustls-tls = ["dep:rustls"]

# This is an internal feature to allow us to build using cargo-all-features and guaranteing that we always have one TLS implementation
# Do not use this feature directly
_fallback-tls = ["native-tls", "rust_engineio/_fallback-tls"]

[[example]]
name = "async"
path = "examples/async.rs"
required-features = ["async", "native-tls"]

[[example]]
name = "secure"
path = "examples/secure.rs"
required-features = ["native-tls"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)'] }

[package.metadata.cargo-all-features]
skip_optional_dependencies = true
skip_feature_sets = [
    # Don't allow both at once
    ["_native-tls", "_rustls-tls"],
    # No need to compile with both native-tls options
    ["native-tls", "native-tls-vendored"],
    # No need to compile with both rustls options
    ["rustls-tls-native-roots", "rustls-tls-webpki-roots"],
    # Don't compile with both native-tls and rustls
    ["native-tls", "rustls-tls-native-roots"],
    ["native-tls", "rustls-tls-webpki-roots"],
    ["native-tls-vendored", "rustls-tls-native-roots"],
    ["native-tls-vendored", "rustls-tls-webpki-roots"],
]
always_include_features = ["_fallback-tls"]
# Don't use the internal features in the build matrix
denylist = ["_native-tls", "_rustls-tls"]
